--- a/SandboxCore/bundleconfig.json
+++ b/SandboxCore/bundleconfig.json
@@ -27,7 +27,8 @@
       "wwwroot/scss/Site.css",
       "wwwroot/scss/_parallax.css",
       "wwwroot/scss/userManagement.css",
-      "wwwroot/scss/accounts.css"
+      "wwwroot/scss/accounts.css",
+      "wwwroot/scss/testing.css"
       // we bundle all of the css files but make sure there are no
       // min.css files or we will have dups
     ]
