--- a/SandboxCore/SandboxCore.csproj
+++ b/SandboxCore/SandboxCore.csproj
@@ -10,51 +10,12 @@
     <Win32Resource />
   </PropertyGroup>
 
-  <ItemGroup>
-    <Content Include="wwwroot\images\spinner2.gif" />
-    <Content Include="wwwroot\js\Account\userManagement.js">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="wwwroot\js\Account\MyProfile.js">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="wwwroot\js\Account\MyProfile.min.js" />
-    <Content Include="wwwroot\js\Account\UserManagement.min.js" />
-    <Content Include="wwwroot\js\chat.js" />
-    <Content Include="wwwroot\js\logoutRedirect.js">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="wwwroot\js\logoutRedirect.min.js">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="wwwroot\js\Testing\looksPromising.js" />
-    <Content Include="wwwroot\js\tutorial.jsx" />
-    <Content Include="wwwroot\lib\bootstrap\dist\css\bootstrap-bup.css">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="wwwroot\lib\bootstrap\dist\css\bootstrap-bup.min.css">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="wwwroot\lib\bootstrap\dist\css\_bootstrap.scss" />
-    <Content Include="wwwroot\scss\accounts.css" />
-    <Content Include="wwwroot\scss\accounts.min.css" />
-    <Content Include="wwwroot\scss\accounts.scss">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="wwwroot\scss\chat.css" />
-    <Content Include="wwwroot\scss\chat.min.css" />
-    <Content Include="wwwroot\scss\chat.scss" />
-    <Content Include="wwwroot\scss\testing.css" />
-    <Content Include="wwwroot\scss\testing.min.css" />
-    <Content Include="wwwroot\scss\testing.scss">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="wwwroot\scss\_parallax.scss" />
-  </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="6.1.1" />
     <PackageReference Include="IdentityModel" Version="2.10.0" />
     <PackageReference Include="IdentityServer4" Version="1.5.2" />
+    <PackageReference Include="knockoutjs" Version="3.4.2" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.2" />
